[package]
name = "cosignerd"
version = "0.0.3"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"
repository = "https://github.com/revault/revaultd"
license-file = "LICENCE"
keywords = ["revault", "bitcoin", "vault"]
description = "Revault cosigning server"
exclude = [".github/"]


[dependencies]
# For the configuration file
toml = "0.5"

# For the messages
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
fern = "0.6"

# Used for daemonization
libc = "0.2"

rusqlite = { version = "0.24.2", features = ["bundled"] }

# Revault-specific libraries
revault_tx = { git = "https://github.com/revault/revault_tx", features = ["use-serde"] }
revault_net = { git = "https://github.com/revault/revault_net" }


# For fuzz testing
bitcoin = {version = "0.27", features = ["rand"], optional = true}

[features]
fuzztesting = ["bitcoin"]

[dev-dependencies]
bitcoin = {version = "0.27", features = ["rand"]}
