[package]
name = "cosignerd"
version = "0.1.0"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"
repository = "https://github.com/revault/revaultd"
license-file = "LICENCE"
keywords = ["revault", "bitcoin", "vault"]
description = "Revault cosigning server"
exclude = [".github/", "fuzz"]


[dependencies]
# For the configuration file
toml = "0.5"

# For the messages
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Logging
log = "0.4"
fern = "0.6"

# Used for daemonization
libc = "0.2"

rusqlite = { version = "0.24.2", features = ["bundled"] }

# Revault-specific libraries
revault_tx = { version = "0.5", features = ["use-serde"] }
revault_net = "0.3"


# For fuzz testing
bitcoin = {version = "0.27", features = ["rand"], optional = true}

[features]
fuzztesting = ["bitcoin"]

[dev-dependencies]
bitcoin = {version = "0.27", features = ["rand"]}
