[package]
name = "fuzz"
version = "0.0.1"
authors = ["Antoine Poinsot <darosior@protonmail.com>"]
edition = "2018"
description = "Honggfuzz based fuzzing for the Cosigning Server"


[dependencies]
honggfuzz = "0.5"
cosignerd = { path = "..", features = ["fuzztesting"] }
revault_net = { git = "https://github.com/revault/revault_net" }
revault_tx = { version = "0.2", features = ["use-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"



[[bin]]
name = "process_sign_message"
path = "targets/process_sign_message.rs"
